# dog-breed-assignment

./: .dockerignore  .gitignore  Dockerfile  README.md  eval.py  infer.py  pyproject.toml  train.py
.devcontainer/: devcontainer.json
src/dog_breed_assignment/: __init__.py  eval.py  infer.py  train.py
src/dog_breed_assignment/data/: __init__.py  dog_breed_datamodule.py
src/dog_breed_assignment/models/: __init__.py  classifier.py
src/dog_breed_assignment/utils/: images.py  runtime.py
