[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dog-breed-assignment"
version = "0.1.0"
description = "PyTorch Lightning dog breed classifier with Kaggle data, Docker, and devcontainer support."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaggle>=2.1.2",
    "lightning>=2.6.4",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "pillow>=10.0.0",
    "rich>=14.0.0",
    "tensorboardX>=2.6.0",
    "timm>=1.0.0",
    "torch>=2.3,<2.4",
    "torchvision>=0.18,<0.19",
]

[project.scripts]
dog-breed-train = "dog_breed_assignment.train:main"
dog-breed-eval = "dog_breed_assignment.eval:main"
dog-breed-infer = "dog_breed_assignment.infer:main"

[tool.setuptools.packages.find]
where = ["src"]
